# Subject-Invariant-SSVEP-GAN

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.bib  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: linting.yml
config/: logging_config.yaml  loo_SISGAN.yaml  loo_SSVEP_class.yaml  loo_pretrain_subject.yaml
sample_data/Real/S02/label/: label_01.npy
sample_data/Real/S03/data/: data_00.npy
src/: CNN_SSVEP_Classification.py  CNN_Subject_Classification.py  CNN_Subject_softmax.py  CNN_pretrainsubject.py  SIS-GAN.py  models.py  utils.py
src/crosstask/: AC-GAN.py  CNN_SSVEP_Classification.py  CNN_pretrainsubject.py  SIS-GAN.py
src/leaveoneout/: AC-GAN.py  CNN_SSVEP_Classification.py  CNN_pretrainsubject.py  SIS-GAN.py  models.py  utils.py
src/persubject/: AC-GAN.py  CNN_SSVEP_Classification.py  DC-GAN.py
src/sis_gan/: CNN_SSVEP_Classification.py  CNN_Subject_Classification.py  CNN_pretrainsubject.py  SIS-GAN.py  cnn_pretrainsubject.py  cnn_subject_classification.py  generate_sisgan.py  models.py  plot_subject_softmax.py  pretrain_subject.py  ssvep_classification.py  train_subject_classifier.py  utils.py
